# beaterai

./: .agent.md  .gitignore  AGENTS.md  Dockerfile  app.py  display_camera.py  docker-compose.yml  download_sample.sh  jetson_adas_architecture.md  requirements.txt
adas/: .dockerignore  Makefile  docker-compose.yml  test_diagnostic.py
adas/adas_ws/src/adas_camera/: package.xml  setup.cfg  setup.py
adas/adas_ws/src/adas_camera/adas_camera/: camera_node.py
adas/adas_ws/src/adas_depth/: package.xml  setup.cfg  setup.py
adas/adas_ws/src/adas_depth/adas_depth/: depth_node.py
adas/adas_ws/src/adas_launch/: package.xml  setup.py
adas/adas_ws/src/adas_launch/launch/: adas_pipeline.launch.py
adas/docker/: Dockerfile  Dockerfile.jetson  entrypoint.sh
dashcam_app/: Dockerfile  _calib_worker.py  adas_postprocessor.py  bevformer_detector.py  build_engines.py  calibration.yaml  dashcam.py  deepstream_pipeline.py  docker-compose.yml  fcn_detector.py  install_service.sh  requirements.txt  test_addweighted.py  test_auto.py  test_geometry.py  test_geometry2.py  test_model_shape.py  test_payload.py  test_polyfit.py  test_segnet.py  test_undistort.py  test_warp.py  test_warp2.py  test_warp_vpy.py  trt_runner.py  twinlite_detector.py  ufld_detector.py  yolop_detector.py
dashcam_app/templates/: index.html
