<?xml version="1.0"?>
<package format="3">
  <name>adas_launch</name>
  <version>0.1.0</version>
  <description>Launch files for the ADAS pipeline</description>
  <maintainer email="user@beaterai.com">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>adas_camera</exec_depend>
  <exec_depend>adas_depth</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
